[package]
name = "linked_list_allocator_no_lock"
version = "0.8.4"
authors = ["Philipp Oppermann <dev@phil-opp.com>", "Jordan Earls <earlz@qtum.info>"]
license = "Apache-2.0/MIT"

description = "Simple allocator usable for no_std systems without locking. It builds a linked list from the freed blocks and thus needs no additional data structures."
keywords = ["allocator", "no_std", "malloc", "heap", "kernel"]

repository = "https://github.com/earlz/linked-list-allocator_no_lock"
documentation = "https://docs.rs/crate/linked_list_allocator_no_lock"

